# CSCI-39536-Intro-to-Robotics

./: AStarPlanner.py  MapEnvironment.py  PRMPlanner.py  RRTPlanner.py  package.xml  setup.py
final_lab/final_lab/: color_follower.py
install/: local_setup.sh  setup.sh
install/lab3_pkg/share/lab3_pkg/: package.dsv  package.ps1  package.sh
lab3_pkg/: setup.cfg  setup.py
lab3_pkg/config/: efk.yaml
lab3_pkg/lab3_pkg/: compare_logger.py  compare_plot.py  odom_logger.py  pd_controller.py  wall_following.py
lab3_pkg/launch/: ekf_localization.launch.py
lab4/: BFSPlanner.py  BugPlanner.py  DFSPlanner.py  IDDFSPlanner.py  PotentialFieldsPlanner.py  VisibilityGraphPlanner.py
lab5_nav/: nav2_params.yaml  package.xml  readme.md  setup.py
lab5_nav/launch/: nav_bringup.launch.py  nav_stack.launch.py  obstacle_nav.launch.py  robot_state_publisher_tb3.launch.py
lab5_nav/maps/: tb3_house_map_bad.pgm  tb3_house_map_bad.yaml  tb3_house_map_good.pgm  tb3_house_map_good.yaml  tb3_world_map.pgm  tb3_world_map.yaml
lab6/: main.py  task5_results.txt  task6_results.txt
log/: latest_build
ros2_ws/src/final_lab/: README.md  package.xml  setup.py
